--- a/index.html
+++ b/index.html
@@ -18,5 +18,23 @@
         </div>
       </nav>
     </header>
+
+    <!-- Hero Section -->
+    <section class="hero-section">
+      <!-- Left side content -->
+      <div class="hero-content">
+        <h1>Best Products Within Budget</h1>
+        <p>
+          Efficiently incentivize diverse methods of empowerment and
+          goal-oriented networks. Globally promote multifunctional models after
+          emerging interfaces.
+        </p>
+        <button>Shop Now</button>
+      </div>
+      <!-- Right side content -->
+      <div class="hero-img">
+        <img src="images/hero-img.jpeg" alt="heroImg" />
+      </div>
+    </section>
   </body>
 </html>
