products section added

--- a/index.html
+++ b/index.html
@@ -36,5 +36,42 @@
         <img src="images/hero-img.jpeg" alt="heroImg" />
       </div>
     </section>
+
+    <!-- Products Section -->
+    <section id="products" class="products-section">
+      <h1>Featured Products</h1>
+      <div class="products">
+        <div class="product-card">
+          <img src="images/airpod.jpeg" alt="" />
+          <h3>Price: 40$</h3>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+        <div class="product-card">
+          <img src="images/charger.jpeg" alt="" />
+          <h3>Price: 50$</h3>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+        <div class="product-card">
+          <img src="images/earphone.jpeg" alt="" />
+          <h3>Price: 60$</h3>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+        <div class="product-card">
+          <img src="images/new-pod.jpeg" alt="" />
+          <h3>Price: 50$</h3>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+        <div class="product-card">
+          <img src="images/wireless.jpeg" alt="" />
+          <h3>Price: 70$</h3>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+        <div class="product-card">
+          <img src="images/pod-case.jpeg" alt="" />
+          <h3>Price: 40$</h3>
+          <button class="buy-btn">Buy Now</button>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
