--- a/index.html
+++ b/index.html
@@ -73,5 +73,9 @@
         </div>
       </div>
     </section>
+    <!-- Footer section -->
+    <footer>
+      <p>Copyright &copy; 2022 all right reserved by <span>PH MART</span></p>
+    </footer>
   </body>
 </html>
